# motion-detective

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  main.py  md.sh  pyproject.toml
.github/agents/: architect.md  coach.md  devops.md  engineer.md  orchestrator.md  product-manager.md
.github/skills/: api-design.md  architecture-patterns.md  clean-architecture.md  clean-code.md  code-quality-tools.md  computer-vision.md  design-patterns.md  devops-standards.md  docker-compose-patterns.md  documentation-standards.md  gitops.md  knowledge-base-authoring.md  mobile-patterns.md  observability.md  pose-estimation.md  regression-harness.md  requirements-management.md  risk-management.md  security.md  systematic-debugging.md  test-driven-development.md  verification-before-completion.md  weightlifting-biomechanics.md
.github/workflows/: first-action.yml  tests.yml
config/: knowledge_base.yml
docs/: PLAN.md
docs/analysis/: phase-0-visual-check.md
docs/risks/: risk-register.md
src/: input_validator.py  weightlifter_detector.py
src/adapters/: file_validator.py  opencv_video.py  overlay_renderer.py  yolo_detector.py  yolo_inference.py  yolo_pose_estimator.py
src/cli/: commands.py
src/domain/: analysis.py  angle_math.py  fault_aggregator.py  faults.py  frame_failure_policy.py  joint_gate.py  keypoint_smoother.py  knowledge_base.py  models.py  phase_detector.py
src/ports/: detector.py  frame_renderer.py  pose_estimator.py  video_reader.py  video_validator.py  video_writer.py
src/use_cases/: analyze_lift.py  analyze_video.py  classify_frame.py  compare_videos.py  frame_pump.py  session_report.py
tests/: conftest.py  test_input_validator.py  test_main.py  test_weightlifter_detector.py
tests/adapters/: conftest.py  test_file_validator.py  test_opencv_video.py  test_overlay_renderer.py  test_phase_detection_real_footage.py  test_yolo_detector.py  test_yolo_inference.py  test_yolo_pose_estimator.py  yolo_fakes.py
tests/cli/: test_commands.py
tests/domain/: test_angle_math.py  test_angle_math_properties.py  test_fault_aggregator.py  test_faults.py  test_frame_failure_policy.py  test_joint_gate.py  test_keypoint_smoother.py  test_knowledge_base.py  test_models.py  test_phase_detector.py
tests/regression/: clip_fixture.py  fixture_pose_estimator.py  synthetic_clip.py  synthetic_pose.py  test_fixture_pose_estimator.py  test_rule_classify_regression.py  test_rule_regression.py  test_synthetic_pose.py
tests/regression/fixtures/: cnj_catch_low_elbows.yaml  cnj_first_pull_hips_shooting.yaml  cnj_jerk_catch_press_out.yaml  cnj_jerk_dip_forward_lean.yaml  cnj_perfect_rep.yaml  cnj_recovery_incomplete_stand.yaml  cnj_second_pull_incomplete_hip_drive.yaml  cnj_setup_hip_too_high.yaml  cnj_setup_knee_too_extended.yaml  snatch_catch_high.yaml  snatch_catch_press_out.yaml  snatch_first_pull_premature.yaml  snatch_perfect_rep.yaml  snatch_recovery_incomplete.yaml  snatch_second_pull_early_arm_bend.yaml  snatch_second_pull_under_extension.yaml  (+4 more)
tests/use_cases/: test_analyze_lift.py  test_analyze_video.py  test_classify_frame.py  test_compare_videos.py  test_frame_pump.py
