[project]
name = "motion-detective"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mediapipe==0.10.32",
    "numpy==2.1.3",
    "opencv-contrib-python==4.13.0.92",
    "polars==1.39.0",
    "PyYAML==6.0.3",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "ultralytics==8.4.21",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov==7.1.0",
    "matplotlib==3.10.8",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-cov==7.1.0",
    "matplotlib==3.10.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_format = "%(asctime)s - %(name)s - %(levelname)s - %(funcName)s - %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
markers = [
    "integration: marks tests that require real video files and external I/O",
]
